# motorcar

./: .gitignore  CMakeLists.txt  flake.nix  justfile
assets/: blue_house.blend  blue_house.blend1  blue_house.glb  chili.blend  chili.blend1  chili.glb  enemy.blend  enemy.blend1  enemy.glb  first.lua  floor.blend  floor.glb  fly.blend  fly.blend1  fly.glb  frying_pan.blend  frying_pan.blend1  frying_pan.glb  hello.lua  hotdog.blend  hotdog.blend1  hotdog.glb  hotdog_bun.blend  hotdog_bun.blend1  hotdog_bun.glb  launcher.blend  launcher.blend1  launcher.glb  level.blend  level.blend.old  level.blend1  level.glb  level.glb.old  mail.blend  mail.blend1  mail.glb  mail_buy_box.blend  mail_buy_box.blend1  mail_buy_box.glb  mashed_potatoes.blend  (+41 more)
demo/: ecs_test.cpp  helloworld.cpp
not-assets-but-still-assets/: thought_bubble.blend  thought_bubble.blend1
plugins/: lifetime.lua  mouse_sens.lua  music.lua  plugin.lua  quit.lua
src/: components.cpp  components.h  ecs.cpp  ecs.h  engine.cpp  engine.h  gfx.cpp  gfx.h  input.cpp  input.h  input.ipp  physics3d.cpp  physics3d.h  pipeline2d.wgsl  pipeline3d.wgsl  pipeline_colliders.wgsl  resources.cpp  resources.h  scripts.cpp  scripts.h  sound.cpp  sound.h  traits.h  types.h
stages/: init.lua  lose.lua
stages/game/: appliances_spawn.lua  enemy_process.lua  enemy_spawner.lua  food_spawn.lua  level_spawn.lua  player_process.lua  player_raypicker.lua  player_spawn.lua  score_label.lua  slop_handler.lua  timer_label.lua
stages/init/: 3d_sprite_process.lua  3d_sprite_spawn.lua  appliances_spawn.lua  enemy_process.lua  enemy_spawner.lua  food_spawn.lua  level_spawn.lua  light_spawn.lua  mail_process.lua  move_test_cube.lua  player_process.lua  player_raypicker.lua  player_spawn.lua  print_delta.lua  process.lua  rotate_gltfs.lua  slop_handler.lua  spawn.lua  test_box_process.lua
stages/init.old/: level_spawn.lua
stages/init.older/: player_process.lua  player_spawn.lua
stages/second/: 1.lua  2.lua
